# QuantumCode

./: .env.template  Cargo.toml  LICENSE  QUANTUM_TODO.md  README.md  package.json  research_04_todo_audit_and_roadmap.md  router_plan.md  trajectory.md
.github/workflows/: ci.yml  release.yml
aur/: PKGBUILD
context/: ROADMAP.md  code-standards.md  project-overview.md  project-state.md  trajectory.md  ui-context.md
debian/: changelog  control  rules
docs/: ARCHITECTURE.md  CHOKE_POINTS.md  IMPLEMENTATION_STATUS.md  LOCAL_LLM_DISCOVERY.md  MODE_SYSTEM.md  PROMPT_COMPACTION.md  PROVIDERS.md  RAG_SYSTEM.md  README.md  ROUTER_DEEP_DIVE.md  TOOLS_SYSTEM.md  TUI_WIDGETS.md  what-the-project-can-do-specificaly-the -ai.md
homebrew/: quantumn-code.rb  quantumn.rb
npm/: package.json
npm/scripts/: install.js
scripts/: install.js  install.sh  uninstall.js
src/: ROADMAP.md  app.rs  cli.rs  main.rs
src/agent/: executor.rs  mod.rs  tools.rs
src/commands/: agent.rs  chat.rs  completions.rs  config.rs  edit.rs  git.rs  help.rs  mod.rs  model.rs  review.rs  scaffold.rs  session.rs  status.rs  test.rs  theme.rs
src/config/: mod.rs  settings.rs  themes.rs
src/prompts/: mod.rs  modes.rs  system.rs
src/providers/: anthropic.rs  gemini.rs  groq.rs  llama_cpp.rs  lm_studio.rs  local_discover.rs  mod.rs  ollama.rs  openai.rs  provider_trait.rs
src/rag/: mod.rs
src/router/: analyzer.rs  context.rs  memory.rs  mod.rs  mode.rs  model.rs  tests.rs  tools.rs  types.rs
src/supervisor/: mod.rs  model_supervisor.rs
src/tools/: bash.rs  glob.rs  grep.rs  mod.rs  read_file.rs  write_file.rs
src/tui/: app.rs  event.rs  mod.rs  render.rs
src/tui/widgets/: dropdown.rs
src/utils/: mod.rs  paths.rs  syntax.rs
